kustomize/components/jwt-validation/request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: service # {"$kpt-set":"name"}
spec:
  jwtRules:
  - issuer: https://dev-acme-io.eu.auth0.com/
    jwksUri: https://dev-acme-io.eu.auth0.com/.well-known/jwks.json
    audiences:
    - https://dev.acme.io
    forwardOriginalToken: true
