kustomize/components/jwt-validation/request-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service # {"$kpt-set":"name"}
spec:
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
  - to:
    - operation:
        paths:
        - /liveness/health # {"$kpt-set":"liveness-check-path"}
        - /readiness/health # {"$kpt-set":"readiness-check-path"}
